--- a/index.html
+++ b/index.html
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Leaflet Map</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-   integrity="sha512-WBkoXOwT+wQ+IU8tLt4I5iMappNB/tC/cR6sf5Zi4JPI+CNRxpsm/xg+lpVyI⣷"
-   crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-   integrity="sha512-WBkoXOwT+wQ+IU8tLt4I5iMappNB/tC/cR6sf5Zi4JPI+CNRxpsm/xg+lpVyI⣷"
-   crossorigin=""></script>
+  <meta charset="utf-8">
 </head>
 <body>
-  <div id="map" style="height: 400px;"></div>
-
-  <script>
-    var mymap = L.map('map').setView([51.505, -0.09], 13);
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(mymap);
-  </script>
+  <p style="color: green">Hellooooooooooo, World</p>
 </body>
 </html>
